--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://mudasarmajeed5:Mine@7137@passwordcluster.90201ub.mongodb.net/?retryWrites=true&w=majority&appName=passwordCluster
+MONGO_URI=mongodb://localhost:27017/
