--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/
+MONGO_URI=mongodb+srv://mudasarmajeed5:Mine%407137@passwordcluster.90201ub.mongodb.net/PasswordManager
